# sciwork

./: .gitignore  404.html  LICENSE  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: docs.yml
docs/: getting-started.md  index.md
docs/config/: api.md  index.md  robust-config.md
docs/console/: api.md  console.md  index.md  printer.md  prompt.md
docs/fs/: api.md  index.md  pathops.md  recipes.md
docs/fs/pathops/: archives.md  create.md  delete.md  dirs.md  getcontents.md  index.md  load.md  names.md  open.md  paths.md  select.md  transfer.md  treeops.md
docs/imports/: index.md
docs/plot/: api.md  index.md  modules.md  plot.md
docs/robust-config/: api.md  cli.md  index.md  installation.md  schema.md  usage.md
docs/stats/: api.md  index.md  mathstat.md
robust-config/: index.html
robust-config/api/: index.html
robust-config/cli/: index.html
robust-config/installation/: index.html
robust-config/schema/: index.html
robust-config/usage/: index.html
search/: search_index.json
src/robust_config/: __init__.py  __main__.py  core.py
src/sciwork/: __init__.py  logutil.py
src/sciwork/config/: __init__.py  bootstrap.py  config.py  loader.py  schema.py  store.py  templates.py
src/sciwork/console/: __init__.py  base.py  bootstrap.py  console.py  printer.py  prompter.py
src/sciwork/data/: base.py  config.py  filters.py  handler.py
src/sciwork/data/ops/: __init__.py  combine.py  scaling.py  selection.py  subtraction.py  transform.py
src/sciwork/fs/: __init__.py  archive_utils.py  archives.py  base.py  classify.py  create.py  delete.py  delete_utils.py  dirs.py  encoding.py  exif.py  filters.py  getcontents.py  inspect.py  load.py  loaders_base.py  names.py  open.py  pathops.py  paths.py  perms.py  select.py  select_utils.py  transfer.py  trees.py  trees_utils.py
src/sciwork/fs/parsers/: uvvis_spc.py  uvvis_spc_core.py
src/sciwork/imports/: __init__.py  lazyproxy.py
src/sciwork/plot/: __init__.py  base.py  decor.py  drawing.py  layout.py  plot.py  ticks.py
src/sciwork/stats/: __init__.py  coerce.py  describe.py  mathstat.py  outliers.py  rounding.py  transforms.py
tests/: test_mathstat.py  test_plot.py
